// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip demos > demo: Arrow 1`] = `
"<div style="display: flex; gap: 16px; padding: 40px;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">With arrow</span></button></span>
  <!--teleport start-->
  <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Without arrow</span></button></span>
  <!--teleport start-->
  <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end-->
</div>"
`;

exports[`Tooltip demos > demo: Basic 1`] = `
"<div style="display: flex; gap: 16px; flex-wrap: wrap; padding: 40px;"><span class="ant-trigger-wrapper"><span>Tooltip will show on mouse enter.</span></span>
  <!--teleport start-->
  <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
  <!--teleport end-->
</div>"
`;

exports[`Tooltip demos > demo: Color 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px; padding: 40px;">
  <h4 style="margin: 0px;">Preset colors</h4>
  <div style="display: flex; gap: 8px; flex-wrap: wrap;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">pink</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">red</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">yellow</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">orange</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">cyan</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">green</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">blue</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">purple</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">geekblue</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">magenta</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">volcano</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">gold</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">lime</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </div>
  <h4 style="margin: 0px;">Custom color</h4>
  <div style="display: flex; gap: 8px; flex-wrap: wrap;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">#f50</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">#2db7f5</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">#87d068</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </div>
</div>"
`;

exports[`Tooltip demos > demo: Placement 1`] = `
"<div style="display: flex; flex-direction: column; gap: 8px; align-items: center; padding: 60px;">
  <div style="display: flex; gap: 8px; justify-content: center;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">TL</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Top</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">TR</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </div>
  <div style="display: flex; justify-content: space-between; width: 340px;">
    <div style="display: flex; flex-direction: column; gap: 8px;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">LT</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Left</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">LB</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end-->
    </div>
    <div style="display: flex; flex-direction: column; gap: 8px;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">RT</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Right</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">RB</span></button></span>
      <!--teleport start-->
      <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
        <!--v-if-->
      </transition-stub>
      <!--teleport end-->
    </div>
  </div>
  <div style="display: flex; gap: 8px; justify-content: center;"><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">BL</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">Bottom</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end--><span class="ant-trigger-wrapper"><button class="ant-btn ant-btn-solid ant-btn-md" type="button"><!--v-if--><!--v-if--><span class="ant-btn-content">BR</span></button></span>
    <!--teleport start-->
    <transition-stub name="ant-zoom-big-fast" appear="false" persisted="false" css="true">
      <!--v-if-->
    </transition-stub>
    <!--teleport end-->
  </div>
</div>"
`;
